# Django-Vuexy-Admin

./: MANIFEST.in  README.md  pyproject.toml
django_vuexy_admin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vuexy_admin/: __init__.py  apps.py  site.py
vuexy_admin/static/admin/css/: vuexy_admin.css
vuexy_admin/templates/admin/: actions.html  base.html  base_site.html  change_form.html  change_list.html  change_list_results.html  date_hierarchy.html  delete_confirmation.html  filter.html  index.html  login.html  nav_sidebar.html  object_history.html  pagination.html  search_form.html  submit_line.html
vuexy_admin/templates/admin/auth/user/: change_password.html
vuexy_admin/templates/admin/edit_inline/: stacked.html  tabular.html
vuexy_admin/templates/admin/import_export/: change_list_export_item.html  change_list_import_item.html
vuexy_admin/templates/admin/includes/: fieldset.html  object_delete_summary.html
vuexy_admin/templates/admin/widgets/: _apex_scripts.html  _chart_card.html  _progress_card.html  _sparkline_card.html  _stat_card.html
